"Lisätty värin valinta, sekä vapaapiirto"

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Drawer</name>
+	<name>o2_draw_729297</name>
 	<comment></comment>
 	<projects>
 	</projects>
