--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-8.0.222.10-hotspot"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/GraphicsLibraries"/>
+	<classpathentry kind="lib" path="/GraphicsLibraries/scala-swing_2.12-2.0.1.jar"/>
+	<classpathentry kind="lib" path="/GraphicsLibraries/scala-swing_2.12-2.0.1-javadoc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
